[package]
name = "teaming-up"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy-midi-graph = { git = "https://github.com/grimace87/bevy-midi-graph.git", rev = "a52fcdcdb61fb8a64b0a7cf709f3bcfc29805d46" }

